--- a/css/header.css
+++ b/css/header.css
@@ -61,9 +61,23 @@ header .logo {
   display: none;
 }
 
+select {
+  background-color: transparent;
+  color: var(--dark);
+  border: none;
+  font-size: 0.8rem;
+  font-weight: 600;
+  cursor: pointer;
+}
+
 select:focus {
   outline: none;
-  font-weight: 500;
+}
+
+option {
+  font-size: 0.9rem;
+  border: none;
+  padding: 0.1rem 3rem;
 }
 
 @media (max-width: 700px) {
@@ -108,7 +122,7 @@ select:focus {
     width: 35px;
   }
 
-  header img{
+  header img {
     background-color: #535bf2;
     border-radius: 50%;
   }
