--- a/css/header.css
+++ b/css/header.css
@@ -3,7 +3,7 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 0.2rem 2rem;
-  box-shadow: 0px -2px 10px -2px var(--dark);
+  box-shadow: 1px 2px 5px -2px var(--dark);
   left: 0;
   top: 0;
   position: fixed;
@@ -68,6 +68,7 @@ select {
   font-size: 0.8rem;
   font-weight: 600;
   cursor: pointer;
+  transition: all 0.3s;
 }
 
 select:focus {
@@ -76,8 +77,11 @@ select:focus {
 
 option {
   font-size: 0.9rem;
+  font-weight: 500;
   border: none;
   padding: 0.1rem 3rem;
+  transition: all 0.3s;
+  color: #242224;
 }
 
 @media (max-width: 700px) {
