--- a/css/header.css
+++ b/css/header.css
@@ -2,7 +2,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0.2rem 2rem;
+  padding: 0.2rem 1.5rem;
   box-shadow: 1px 2px 5px -2px var(--dark);
   left: 0;
   top: 0;
@@ -22,6 +22,11 @@ header .logo {
   color: #646cff;
 }
 
+header img {
+  background-color: #535bf2;
+  border-radius: 50%;
+}
+
 .social_menu {
   display: flex;
   align-items: center;
@@ -37,7 +42,7 @@ header .logo {
   border-radius: 0.275rem;
   transition: all 0.3s ease-in-out;
 }
-.social_menu li a:hover {
+.social_menu li a:is(:hover, :active, :focus) {
   background-color: #535bf2;
   color: #f5f5f5;
 }
@@ -76,7 +81,7 @@ select:focus {
 }
 
 option {
-  font-size: 0.9rem;
+  font-size: 0.825rem;
   font-weight: 500;
   border: none;
   padding: 0.1rem 3rem;
@@ -124,11 +129,6 @@ option {
   header .logo {
     font-size: 0.8rem;
     width: 35px;
-  }
-
-  header img {
-    background-color: #535bf2;
-    border-radius: 50%;
   }
 
   .social_menu li a {
