--- a/css/service.css
+++ b/css/service.css
@@ -17,23 +17,24 @@
 .services p {
   font-weight: 500;
   padding-top: 0.3rem;
-  font-size: 1.4rem;
+  font-size: 1rem;
 }
 
 .services img {
-  width: 100%;
+  width: 300px;
+  height: 300px;
   border-radius: 0.4rem;
   margin: 0 auto;
 }
 
 @media (min-width: 1024px) {
   .services {
-   grid-template-columns: repeat(2,1fr);
-   grid-row: 2em;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row: 2em;
   }
 
   .services img {
-    width: 60%;
+    width: 100%;
     border-radius: 0.4rem;
   }
 }
