--- a/css/footer.css
+++ b/css/footer.css
@@ -1,18 +1,20 @@
 footer {
   background-color: #04293a;
   color: #f5f5f5;
-  padding: 0.5rem;
+  padding: 0.8rem;
   font-weight: 500;
   user-select: none;
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 2em;
 }
 
 footer p {
   display: flex;
   align-items: center;
-  gap: 1em;
+  gap: 0.5em;
+  font-size: 1.1rem;
 }
 
 footer img {
@@ -22,5 +24,6 @@ footer img {
 @media (min-width: 1024px) {
   footer {
     justify-content: space-around;
+    gap: 0;
   }
 }
