--- a/css/hero.css
+++ b/css/hero.css
@@ -4,9 +4,8 @@
   place-items: center;
   gap: 1.5em;
   overflow: hidden;
-  min-height: 100vh;
   padding: 4rem 0;
-  padding-top: 7rem;
+  margin-top: 7rem;
 }
 
 .hero h1 {
@@ -17,13 +16,15 @@
 .hero img {
   border-top-left-radius: 12rem;
   border-bottom-left-radius: 12rem;
-  margin-left: 5rem;
+  margin-left: auto;
+  padding-right: 0;
 }
 
 @media (min-width: 1024px) {
   .hero {
     grid-template-columns: repeat(2, 1fr);
-    padding: 0 2rem;
+    padding: 0 0 0 2rem;
+    margin-top: 9rem;
   }
 
   .hero img {
