--- a/css/contact.css
+++ b/css/contact.css
@@ -1,16 +1,17 @@
 .contact {
-  place-content: center;
-  place-items: center;
-  gap: 1.5em;
-  min-height: 100vh;
   width: 100%;
-  padding: 0 1rem;
+  padding: 4rem 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .contact form {
   display: grid;
   gap: 1em;
   padding-top: 2rem;
+  width: 100%;
 }
 
 .username,
@@ -54,11 +55,6 @@ textarea {
   font-size: 1rem;
 }
 
-/* input:focus,
-textarea:focus {
-  outline: 1px solid #333;
-} */
-
 .contact button {
   background-color: #646cff;
   color: #fff;
@@ -99,12 +95,13 @@ textarea:focus {
 
 @media (min-width: 900px) {
   .contact {
-    display: grid;
     margin: 0 auto;
+    padding: 6rem 0;
   }
 
   .contact form {
     padding-top: 0;
+    max-width: 500px;
   }
 
   .username,
