--- a/css/header.css
+++ b/css/header.css
@@ -41,9 +41,13 @@ header img {
   border-radius: 0.275rem;
   transition: all 0.3s ease-in-out;
 }
-.social_menu li a:is(:hover, :active, :focus) {
+.social_menu li a:hover {
   background-color: #535bf2;
-  color: #f5f5f5;
+  color: #fff;
+}
+.social_menu li a.active {
+  background-color: #535bf2;
+  color: #fff;
 }
 
 .mode_icons {
