--- a/css/hero.css
+++ b/css/hero.css
@@ -5,7 +5,6 @@
   gap: 1.5em;
   overflow: hidden;
   padding: 4rem 0;
-  margin-top: 7rem;
 }
 
 .hero h1 {
@@ -24,7 +23,7 @@
   .hero {
     grid-template-columns: repeat(2, 1fr);
     padding: 0 0 0 2rem;
-    margin-top: 9rem;
+    min-height: 100dvh;
   }
 
   .hero img {
