--- a/css/service.css
+++ b/css/service.css
@@ -3,10 +3,9 @@
   place-content: center;
   place-items: center;
   gap: 1.5em;
-  min-height: 100vh;
+  min-height: 100dvh;
   text-align: center;
-  padding: 0.5rem 1.2rem;
-  padding-top: 5rem;
+  padding: 3rem 1.2rem;
 }
 
 .services {
