--- a/css/footer.css
+++ b/css/footer.css
@@ -1,20 +1,20 @@
 footer {
   background-color: #04293a;
   color: #f5f5f5;
-  padding: 0.8rem;
+  padding: 1.2rem 1rem;
   font-weight: 500;
   user-select: none;
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 2em;
+  justify-content: space-between;
+  gap: 1em;
 }
 
 footer p {
   display: flex;
   align-items: center;
   gap: 0.5em;
-  font-size: 1.1rem;
+  font-size: 0.9rem;
 }
 
 footer img {
