--- a/css/hero.css
+++ b/css/hero.css
@@ -4,12 +4,15 @@
   place-items: center;
   gap: 1.5em;
   overflow: hidden;
-  padding: 4rem 0;
+  padding: 3rem 0;
+  min-height: 100dvh;
 }
 
 .hero h1 {
   text-align: center;
+  text-wrap: balance;
   padding: 1rem 2rem;
+  font-size: 1.8rem;
 }
 
 .hero img {
@@ -17,21 +20,25 @@
   border-bottom-left-radius: 12rem;
   margin-left: auto;
   padding-right: 0;
+  padding-left: 1rem;
 }
 
 @media (min-width: 900px) {
   .hero {
     grid-template-columns: repeat(2, 1fr);
-    padding: 0 0 0 2rem;
-    min-height: 100dvh;
+    padding: 0 0 0 5rem;
+    margin-top: 1.5rem;
+    gap: 0;
   }
 
   .hero img {
     border-top-left-radius: 15rem;
     border-bottom-left-radius: 15rem;
+    width: 540px;
+    height: 325px;
   }
 
   .hero h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 }
