--- a/style.css
+++ b/style.css
@@ -79,6 +79,14 @@ h6 {
   --black: #090909;
 }
 
+.dark-theme {
+  --dark: #f7f7f7;
+  --light: #121212;
+
+  --white: #090909;
+  --black: white;
+}
+
 html,
 body {
   scroll-behavior: smooth;
@@ -86,27 +94,11 @@ body {
 }
 
 body {
-  background-color: var(--light);
+  background-color: var(--white);
   color: var(--dark);
   display: grid;
   grid-template-rows: 1fr auto;
   min-height: 100dvh;
   width: 100%;
   transition: all 0.3s;
-}
-
-section:nth-child(odd) {
-  background: var(--white);
-}
-
-h1 {
-  font-size: clamp(1.1rem, 8vw, 2rem);
-}
-
-.dark-theme {
-  --dark: #f7f7f7;
-  --light: #121212;
-
-  --white: #090909;
-  --black: white;
 }
