--- a/css/hero.css
+++ b/css/hero.css
@@ -15,23 +15,30 @@
   font-size: 1.8rem;
 }
 
-.hero img {
+.img {
+  background-image: url(/img/dentist.jpg);
+  width: 400px;
+  height: 250px;
+  object-fit: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   border-top-left-radius: 12rem;
   border-bottom-left-radius: 12rem;
-  margin-left: auto;
+  margin-left: 4rem;
   padding-right: 0;
-  padding-left: 1rem;
+  box-shadow: var(--shadow) 0px 7px 29px 0px;
 }
 
 @media (min-width: 900px) {
   .hero {
     grid-template-columns: repeat(2, 1fr);
-    padding: 0 0 0 5rem;
+    padding: 0 0 0 7rem;
     margin-top: 1.5rem;
     gap: 0;
   }
 
-  .hero img {
+  .img {
     border-top-left-radius: 15rem;
     border-bottom-left-radius: 15rem;
     width: 540px;
@@ -40,5 +47,6 @@
 
   .hero h1 {
     font-size: 2rem;
+    text-align: left;
   }
 }
