--- a/css/service.css
+++ b/css/service.css
@@ -33,6 +33,7 @@
   height: 300px;
   border-radius: 0.4rem;
   margin: 0 auto;
+  box-shadow: var(--shadow) 0px 7px 29px 0px;
 }
 
 @media (min-width: 900px) {
